# decisionTrees

./: .gitignore  CMakeLists.txt  data.csv  main  main.cpp  utils.cpp  utils.h
include/: DecisionTree.h  utils.h
src/: DecisionTree.cpp  utils.cpp
